<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Empowered</string>
    <string name="action_settings">Settings</string>
    <string name="tvUserName">User Name:</string>
    <string name="tvPassword">Password:</string>
    <string name="btLogin">Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_section1">Create</string>
    <string name="title_section2">My Issues</string>
    <string name="title_section3">Local Issues</string>
    <string name="title_section4">Assigned</string>
    <string name="tvCreateTitle">Title:</string>
    <string name="tvCreatedBy">Created By:</string>
    <string name="tvCreateDescription">Description:</string>
    <string name="tvCreateImageURL">Image:</string>
    <string name="tvCreateLatitude">Latitude:</string>
    <string name="tvCreateLongitude">Longitude:</string>
    <string name="btCreateIssue">Create Issue</string>
    <string name="title_activity_create_success">CreateSuccessActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btCreateImage">Select Image</string>
    <string name="btPledge">Pledge</string>
	<string name="white">FFFFFF</string>
	<string name="black">000000</string>
	
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="title_activity_pledge">PledgeActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_issue">IssueActivity</string>

</resources>
